--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@ipsme/reflector-ws-client",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "",
   "main": "sharedworker-reflector.js",
   "scripts": {
     "build": "webpack",
-    "test": "test.js"
+    "test": "test.js",
+    "clean": "del dist && echo OK"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "reconnecting-websocket": "^4.4.0"
   },
   "devDependencies": {
+    "del-cli": "^5.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
