--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@ipsme/reflector-ws-client",
-  "version": "0.3.10",
+  "version": "0.3.11",
   "description": "",
   "main": "dist/sharedworker-reflector.es.mjs",
+  "types": "dist/sharedworker-reflector.d.ts",
   "scripts": {
     "build": "rollup --config",
     "test": "test.js",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
     "del-cli": "^5.0.0",
-    "rollup": "^3.2.5"
+    "rollup": "^3.2.5",
+    "rollup-plugin-dts": "^5.0.0"
   }
 }
