--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "interoperability"
   ],
   "author": "K.Nevelsteen, PhD",
-  "license": "ISC",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/IPSME/npm-reflector-ws-client/issues"
   },
