--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ipsme/reflector-ws-client",
+  "name": "@ipsme/reflector-webbr-ws",
   "version": "0.4.0",
   "description": "",
   "main": "dist/sharedworker-reflector.es.mjs",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/IPSME/npm-reflector-ws-client.git"
+    "url": "git+ssh://git@github.com:IPSME/npm-reflector-webbr-ws.git"
   },
   "keywords": [
     "reflector",
@@ -22,9 +22,9 @@
   "author": "K.Nevelsteen, PhD",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/IPSME/npm-reflector-ws-client/issues"
+    "url": "https://github.com/IPSME/npm-reflector-webbr-ws/issues"
   },
-  "homepage": "https://github.com/IPSME/npm-reflector-ws-client#readme",
+  "homepage": "https://github.com/IPSME/npm-reflector-webbr-ws#readme",
   "dependencies": {
     "@ipsme/msgcache-dedup": "^0.1.16",
     "@ipsme/msgenv-broadcastchannel": "^0.3.2",
